# evm-logs-canister

./: .gitignore  Cargo.toml  FAQ.md  Makefile  README.md  canister_ids.json  decoded_notifications.txt  dfx.json  draft  generated_candid.did  get_decoded_events  rustfmt.toml  topics_vec_of_vec.patch  txhashes1.txt  txhashes2.txt  useful
canister_utils/: Cargo.toml
canister_utils/src/: logs.rs
evm_logs_canister/: Cargo.toml  README.md  evm_logs_canister.did
evm_logs_canister/src/: constants.rs  internals.rs  lib.rs  lifecycle.rs  subscription_manager.rs  types.rs  utils.rs
evm_logs_canister/src/candid_methods/: methods.rs
evm_logs_canister/src/chain_service/: config.rs  events_processor.rs  logs_fetcher.rs  monitoring.rs  service.rs
evm_logs_canister/src/internals/: hex_types.rs  log_metrics.rs  macros.rs  misc.rs
evm_logs_canister/src/lifecycle/: canister_geek.rs  init.rs  methods.rs  migration.rs
evm_logs_canister/src/log_filters/: filter_manager.rs
evm_logs_canister/src/subscription_manager/: events_publisher.rs  mod.rs  queries.rs  subscription.rs  utils.rs
evm_logs_canister/src/types/: balances.rs  config.rs  state.rs
evm_logs_canister/src/utils/: log_metrics.rs
evm_logs_canister/tests/: batch_requests_test.rs  internals.rs  main_workflow_test.rs  subscribe_publish_receive.rs  test_config.rs
evm_logs_types/: Cargo.toml
evm_logs_types/src/: lib.rs
evm_logs_types/src/pub_sub/: mod.rs
evm_rpc_mocked/: Cargo.toml
evm_rpc_mocked/src/: lib.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
proxy_canister/: Cargo.toml  README.md  proxy_canister.did
proxy_canister/src/: lib.rs
scripts/: build  fetch-pocket-ic
src/: chain_service.rs  constants.rs  evm_logs_canister.did  lib.rs  methods.rs  subscription_manager.rs  topic_manager.rs  types.rs  utils.rs
src/candid_methods/: internal.rs  methods.rs  mod.rs
src/canister_testing/evm_rpc_mocked/: Cargo.toml  evm_rpc_mocked.did
src/canister_testing/evm_rpc_mocked/src/: lib.rs
src/canister_testing/test_canister1/: Cargo.toml  test_canister.did
src/canister_testing/test_canister1/src/: decoders.rs  lib.rs  macros.rs  read_contract.rs  state.rs  utils.rs
src/canister_testing/test_canister2/: Cargo.toml  test_canister.did
src/canister_testing/test_canister2/src/: lib.rs
src/chain_service/: config.rs  events_processor.rs  logs_fetcher.rs  mod.rs  monitoring.rs  service.rs  utils.rs
src/log_filters/: filter_manager.rs  mod.rs
src/proxy/: Cargo.toml  proxy_canister.did
src/proxy/src/: lib.rs
src/proxy_canister/: Cargo.toml
src/proxy_canister/src/: lib.rs
src/subscription_manager/: events_publisher.rs  mod.rs  queries.rs  state.rs  utils.rs
src/test_canister/: Cargo.toml  test_canister.did
src/test_canister/src/: decoders.rs  lib.rs  macros.rs  read_contract.rs  state.rs  utils.rs
src/test_canister1/: Cargo.toml  test_canister.did
src/test_canister1/src/: lib.rs  read_contract.rs
src/test_canister2/: Cargo.toml  test_canister.did
src/test_canister2/src/: lib.rs
src/types/: balances.rs  config.rs  mod.rs  state.rs
src/utils/: log_metrics.rs  mod.rs  utils.rs
test_canister/: Cargo.toml  test_canister.did
test_canister/src/: decoders.rs  lib.rs  read_contract.rs  utils.rs
test_configuration/: test_config.toml
tests/: README.md  batch_requests_test.rs  main_workflow_test.rs  subscribe_publish_receive.rs  subscription_manager_test.rs
tests/common/: common.rs  mod.rs
tests/evm_rpc_mocked/: Cargo.toml  evm_rpc_mocked.did
tests/evm_rpc_mocked/src/: lib.rs
