[workspace]
members = [
    ".",
    "evm_logs_types", 
    "metrics", 
    "src/test_canister",
    "src/proxy_canister",
    "tests/evm_rpc_mocked",
]

[package]
name = "evm_logs_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
ic-cdk-macros.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
evm_logs_types = {path = "evm_logs_types"}
metrics = { path = "metrics" }
tokio.workspace = true
num-traits.workspace = true
futures.workspace = true
thiserror.workspace = true
quote.workspace = true
syn.workspace = true
evm_rpc_types.workspace = true
hex.workspace = true
getrandom = { version = "0.2", features = ["js"] }
ic-utils = { package = "canistergeek_ic_rust", version = "0.4.2" }

[workspace.dependencies]
candid = { version = "0.10" }
ic-cdk = "0.17.1"
ic-cdk-timers = "0.11" 
ic-cdk-macros = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evm_logs_types = {path = "evm_logs_types"}
metrics = { path = "metrics" }
tokio = {version = "1.40.0"}
num-traits = "0.2"
futures = "0.3.31"
thiserror = "2.0.11"
quote = "1.0.38"
syn = "2.0.96"
evm_rpc_types = "1.2.0"
hex = "0.4.3"
getrandom = { version = "0.2", features = ["js"] }
ic-utils = { package = "canistergeek_ic_rust", version = "0.4.2" }
serde_bytes = "0.11"

[dev-dependencies]
pocket-ic = "6.0.0"

[package.metadata.candid]
generate = true
