[workspace]
members = [
    "evm_logs_canister",
    "evm_logs_types", 
    "metrics", 
    "test_canister",
    "proxy_canister",
    "evm_rpc_mocked",
]
resolver = "2"
description = "EVM logs canister for monitoring events"
readme = "README.md"
rust-version = "1.85.0"
authors = ["Oreally"]
repository = "https://github.com/BoostyLabs/tricorn-staking"
categories = ["blockchain"]

[workspace.dependencies]
candid = { version = "0.10.13" }
ic-cdk = "0.17.1"
ic-cdk-timers = "0.11.0"
ic-cdk-macros = "0.17.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
evm_logs_types = {path = "./evm_logs_types"}
metrics = { path = "metrics" }
tokio = {version = "1.40.0"}
num-traits = "0.2.19"
futures = "0.3.31"
thiserror = "2.0.11"
quote = "1.0.38"
evm_rpc_types = "1.2.0"
hex = "0.4.3"
getrandom = { version = "0.2.15", features = ["js"] }
ic-utils = { package = "canistergeek_ic_rust", version = "0.4.2" }
serde_bytes = "0.11.17"
pocket-ic = "6.0.0"
syn = { version = "2.0.63", features = ["full"] }
ic-web3-rs = "0.1.9"


