[workspace]
members = [
    "evm_logs_canister",
    "evm_logs_types",
    "canister_utils",
    "test_canister",
    "proxy_canister",
    "evm_rpc_mocked",
]
resolver = "2"
description = "EVM logs canister for monitoring events"
readme = "README.md"
rust-version = "1.85.0"
authors = ["Oreally"]
repository = "https://github.com/BoostyLabs/tricorn-staking"
categories = ["blockchain"]

[workspace.dependencies]
anyhow = { version = "1.0.97" }
candid = { version = "0.10.13" }
config = { version = "0.15.11" }
ic-cdk = { version = "0.17.1" }
ic-cdk-timers = { version = "0.11.0" }
ic-cdk-macros = { version = "0.17.1" }
serde = { version = "1.0.219", features = ["derive"] }
evm_logs_types = { path = "./evm_logs_types" }
canister_utils = { path = "canister_utils" }
tokio = { version = "1.44.1" }
futures = { version = "0.3.31" }
thiserror = { version = "2.0.11" }
evm_rpc_types = { version = "1.3.0" }
hex = { version = "0.4.3" }
getrandom = { version = "0.2.15", features = ["js"] }
ic-utils = { package = "canistergeek_ic_rust", version = "0.4.2" }
serde_bytes = { version = "0.11.17" }
pocket-ic = { version = "6.0.0" }
ic-web3-rs = { version = "0.1.9" }


