[package]
name = "evm_rpc_mocked"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
canister_utils.workspace = true
evm_logs_types.workspace = true
evm_rpc_types.workspace = true
ic-cdk-macros.workspace = true
ic-cdk.workspace = true
serde.workspace = true

