[package]
name = "proxy_canister"
version = "0.1.0"
edition = "2024"

[lib]
name = "proxy_canister"
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
canister_utils.workspace = true
evm_logs_types.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
serde.workspace = true
serde_bytes.workspace = true
