[package]
name = "proxy_canister"
version = "0.1.0"
edition = "2021"

[lib]
name = "proxy_canister"
crate-type = ["cdylib"]

[dependencies]
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
candid.workspace = true
serde.workspace = true
serde_bytes.workspace = true
evm_logs_types = { path = "../../evm_logs_types" } 